--- a/WalletWasabi.Fluent/Controls/DualCurrencyEntryBox.axaml
+++ b/WalletWasabi.Fluent/Controls/DualCurrencyEntryBox.axaml
@@ -49,7 +49,8 @@
                                       Grid.Column="{TemplateBinding LeftColumn}"
                                       Background="Transparent"
                                       BorderThickness="0"
-                                      IsRightSide="{TemplateBinding IsConversionReversed}" />
+                                      IsRightSide="{TemplateBinding IsConversionReversed}">
+                  </c:CurrencyEntryBox>
 
                   <Button x:Name="PART_SwapButton" Focusable="False"
                           HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent"
