add selected coins number

--- a/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/WalletCoinsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/WalletCoinsView.axaml
@@ -16,8 +16,8 @@
                  EnableBack="{Binding EnableBack}"
                  ScrollViewer.VerticalScrollBarVisibility="Disabled"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                 SkipContent="Send selected coins"
-                 EnableSkip="{Binding IsAnySelected^}">
+                 SkipContent="{Binding SelectedCoinsCount, StringFormat=Send {0} selected coin}"
+                 EnableSkip="{Binding !!SelectedCoinsCount}">
     <TreeDataGrid Source="{Binding Source}"
                   CanUserSortColumns="True">
       <TreeDataGrid.Styles>
