--- a/WalletWasabi.Fluent/Controls/HistoryPlaceholderPanel.axaml
+++ b/WalletWasabi.Fluent/Controls/HistoryPlaceholderPanel.axaml
@@ -1,41 +1,68 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:c="using:WalletWasabi.Fluent.Controls">
+        x:DataType="wallets:WalletViewModel"
+        x:CompileBindings="True"
+        xmlns:c="using:WalletWasabi.Fluent.Controls"
+        xmlns:wallets="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets">
+
+  <Design.PreviewWith>
+    <c:HistoryPlaceholderPanel Width="300" Height="250" />
+  </Design.PreviewWith>
 
   <Style Selector="c|HistoryPlaceholderPanel">
     <Setter Property="Template">
       <ControlTemplate>
-        <Panel>
-          <Panel.Styles>
-            <Style Selector="Border.dummyLine">
-              <Setter Property="Opacity" Value="{Binding .}" />
-              <Setter Property="Background" Value="{DynamicResource SystemChromeGrayColor}" />
-              <Setter Property="Height" Value="10" />
-              <Setter Property="CornerRadius" Value="5" />
-              <Setter Property="Margin" Value="5 0" />
-            </Style>
-          </Panel.Styles>
-          <ItemsControl x:Name="PART_DummyRows" x:CompileBindings="False">
-            <ItemsControl.ItemsPanel>
-              <ItemsPanelTemplate>
-                <StackPanel Orientation="Vertical" />
-              </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-              <DataTemplate>
-                <Grid ColumnDefinitions="80,150,*,145,145,145"
-                      Height="{StaticResource HistoryTableRowHeight}">
-                  <Border Grid.Column="0" Grid.ColumnSpan="1" Classes="dummyLine" />
-                  <Border Grid.Column="1" Grid.ColumnSpan="1" Classes="dummyLine" />
-                  <Border Grid.Column="2" Grid.ColumnSpan="1" Classes="dummyLine" />
-                  <Border Grid.Column="3" Grid.ColumnSpan="1" Classes="dummyLine" />
-                  <Border Grid.Column="4" Grid.ColumnSpan="1" Classes="dummyLine" />
-                  <Border Grid.Column="5" Grid.ColumnSpan="1" Classes="dummyLine" />
-                </Grid>
-              </DataTemplate>
-            </ItemsControl.ItemTemplate>
-          </ItemsControl>
-        </Panel>
+        <Grid>
+          <Panel>
+            <Panel.Styles>
+              <Style Selector="Border.dummyLine">
+                <Setter Property="Opacity" Value="{Binding .}" />
+                <Setter Property="Background" Value="{DynamicResource SystemChromeGrayColor}" />
+                <Setter Property="Height" Value="10" />
+                <Setter Property="CornerRadius" Value="5" />
+                <Setter Property="Margin" Value="5 0" />
+              </Style>
+            </Panel.Styles>
+            <ItemsControl x:Name="PART_DummyRows" x:CompileBindings="False" Opacity="0.1" >
+              <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                  <StackPanel Orientation="Vertical" />
+                </ItemsPanelTemplate>
+              </ItemsControl.ItemsPanel>
+              <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                  <Grid ColumnDefinitions="80,150,*,145,145,145"
+                        Height="{StaticResource HistoryTableRowHeight}">
+                    <Border Grid.Column="0" Classes="dummyLine" />
+                    <Border Grid.Column="1" Classes="dummyLine" />
+                    <Border Grid.Column="2" Classes="dummyLine" />
+                    <Border Grid.Column="3" Classes="dummyLine" />
+                    <Border Grid.Column="4" Classes="dummyLine" />
+                    <Border Grid.Column="5" Classes="dummyLine" />
+                  </Grid>
+                </DataTemplate>
+              </ItemsControl.ItemTemplate>
+            </ItemsControl>
+          </Panel>
+
+          <Border CornerRadius="2" BorderThickness="1" Background="{DynamicResource TileRegionColor}"
+                  BorderBrush="{DynamicResource TileBorderColor}" VerticalAlignment="Center" HorizontalAlignment="Center"
+                  Padding="12">
+            <StackPanel>
+              <TextBlock TextAlignment="Center">Your wallet is empty</TextBlock>
+              <TextBlock TextAlignment="Center">Start by</TextBlock>
+              <Button Classes="function" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="8"
+                      Command="{Binding ReceiveCommand}">
+                <StackPanel Orientation="Horizontal" Spacing="15">
+                  <PathIcon Data="{StaticResource wallet_action_receive}" />
+                  <TextBlock Text="Receiving some Bitcoin" />
+                </StackPanel>
+              </Button>
+            </StackPanel>
+
+          </Border>
+
+        </Grid>
       </ControlTemplate>
     </Setter>
   </Style>
